--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-        <link rel="icon" type="image/png" href="images/favicon.png" />
+        <link rel="icon" type="image/png" href="images/android-icon-36x36.png" />
         <meta name=viewport content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
@@ -19,7 +19,7 @@
             <nav>   
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="#nos-services">Services</a></li>
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#projets">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -30,7 +30,7 @@
                     <div class="slide">
                         <p><span class="coloragency">WEBAGENCY</span> : L'AGENCE DE TOUS<br>VOS PROJETS !<br>
                             <small>Vous avez un projet web ? La WebAgency vous aide à le réaliser !</small></p>
-                            <a class="button-1" href="#">Plus d'infos</a> <img src="images/slider/bg1.jpg" alt="photoslider1">
+                            <a class="button-1" href="#services">Plus d'infos</a> <img src="images/slider/bg1.jpg" alt="photoslider1">
                     </div>
                     <div class="slide">
                         <p><span class="coloragency">WEBAGENCY</span> : L'AGENCE DE TOUS <br> VOS PROJETS !<br>
@@ -61,27 +61,33 @@
                 <div id="icons">    <!-- les icones de fontawesome -->
 
                     <div class="part">
-                        <div class="rond2"><i class="fas fa-tools fa-2x"></i>
+                        <div class="rond2"><i class="fas fa-chart-line fa-2x"></i>
                             <div class="rond3"></div>
                         </div>
-                        <h3>UX design</h3>
-                        <p>Avec l'UX Design, nous anticipons vos besoins et vos attentes lors de la création de votre site web. <br> Notre objectif... rendre votre site facile d'accès aux utilisateurs avec une prise en main rapide.</p>
+                        <div class="text" >
+                            <h3>UX design</h3>
+                            <p>Avec l'UX Design, nous anticipons vos besoins et vos attentes lors de la création de votre site web. <br> Notre objectif... rendre votre site facile d'accès aux utilisateurs avec une prise en main rapide.</p>
+                        </div>
                     </div>
 
                     <div class="part">
-                           <div class="rond2"><i class="fas fa-cubes fa-2x"></i>
-                                <div class="rond3"></div>
+                        <div class="rond2"><i class="fas fa-cubes fa-2x"></i>
+                            <div class="rond3"></div>
                     </div>
-                        <h3>UI design</h3>
-                        <p>Grace à l'UI Design, nous concevons pour vous une interface agréable et pratique pour votre site web.<br> Notre but... vous apportez la meilleure expérience possible avec un site dynamique, agréable et épuré.</p>
+                        <div class="text">
+                            <h3>UI design</h3>
+                            <p>Grace à l'UI Design, nous concevons pour vous une interface agréable et pratique pour votre site web.<br> Notre but... vous apportez la meilleure expérience possible avec un site dynamique, agréable et épuré.</p>
+                        </div>
                     </div>
 
                     <div class="part">
                         <div class="rond2"><i class="fas fa-chart-pie fa-2x"></i>
                             <div class="rond3"></div>
+                    </div>
+                        <div class="text">
+                            <h3>SEO</h3>
+                            <p>Pour finaliser le tout, nous optimisons votre site web afin de rendre celui-ci visible dans les différents moteurs de recherche.</p>
                         </div>
-                        <h3>SEO</h3>
-                        <p>Pour finaliser le tout, nous optimisons votre site web afin de rendre celui-ci visible dans les différents moteurs de recherche. </p>
                     </div>
                 </div>
             </div>
